Thu Apr 03 08:01:49 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/inter.c, src/genius-readline-helper.c: apply patch from Felipe
	  Sateler of debian to fix build with new readline.

Wed Mar 26 18:44:53 2014  Jiri (George) Lebl <jirka@5z.com>

	* lib/linear_algebra/linear_algebra.gel: Fix IsInvertibleField,
	  would return false negatives

Mon Mar 17 22:31:01 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.[ch], src/funclib.c: Implement DisplayVariables which
	  shows either individual variables or a complete listing including
	  stacktrace if called inside another function.

	* lib/misc/misc.gel: Add PrintTable which prints a table of a
	  function
	
	* help/C/genius.xml: Document the above

Wed Mar 12 17:01:07 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c, src/calc.h: Implement NonzeroColumns and
	  NonzeroElements to return indices of nonzero columns in a matrix
	  and elements in a vector

	* src/matrixw.[ch]: the _vindex function could have returned NULL,
	  though it didn't seem to cause any crashes

	* src/geniustests.txt: test the above

	* help/C/genius.xml: document the above

Mon Nov 18 17:53:27 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/combinatorics/factorial.gel: Fix applying "Triangular" over
	  matrices

Fri Oct 25 08:35:40 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: improve logic for jump detection (still not
	  perfect)

Thu Oct 24 23:51:15 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: better detection of jumps due to vertical
	  asymptotes to avoid drawing the vertical lines

Sun Oct 20 23:44:25 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/equation_solving/newton.gel: Add HalleysMethod

	* src/geniustests.txt: do testing

	* help/C/genius.xml: Document Halleys method

Wed Oct 16 08:11:49 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/functions/lambert.gel: slight improvement in speed.

Wed Oct 16 00:33:17 2013  Jiri (George) Lebl <jirka@5z.com>
