@@ -1,3 +1,9 @@
+Mon May 05 17:00:38 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome_genius.[ch], src/graphing.c: export the calc_running
+	  to graphing and use it.  Fix interrupting drawing of solutions
+	  from the gui.
+
 Thu Apr 03 08:01:49 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/inter.c, src/genius-readline-helper.c: apply patch from Felipe
